Fix horizontal overflow, as required in CR

--- a/style.css
+++ b/style.css
@@ -1,3 +1,8 @@
+html,
+body {
+  overflow-x: hidden;
+}
+
 .header {
   background-image: url('images/background1.png');
   background-repeat: no-repeat;
